tdf#128447 sc/vml: accept <? ?> xml prolog

... or processing instruction, or text directive.

The inability to parse this was exposed in LO 6.2
with commit 2cae2ecfef47d8dd10647c10f9577392c1887d3a

I added <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
to the top of vmlDrawing1.vml from the unit test,
which invalidates the entire .vml file and the two
controls are lost without this fix.

Change-Id: Ia1e6d5f9bb932756f70dca59fa8b32004c9e8013